Stop jumping around on Chat page.

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -48,6 +48,10 @@ div[variant="success"] .card-header {
   display: block;
 }
 
+body {
+  scrollbar-gutter: stable both-edges;
+}
+
 body.fd {
   background-image: url('~static/wallpaper.png');
 }
@@ -211,7 +215,7 @@ legend {
 }
 
 .sidebar__wrapper {
-  height: calc(100vh - 100px);
+  height: calc(100vh - 68px);
 
   .card-body .card {
     border-radius: unset;
